# persistent-entity-mirror

./: Makefile  default.nix  persistent-entity-mirror.cabal
src/: Lib.hs
src/Database/PersistentEntityMirror/: MySQL.hs  MySQLParse.hs
test/PersistentEntityMirror/: MySQLManualSpec.hs  MySQLParseSpec.hs  MySQLSpec.hs
