name:                persistent-entity-mirror
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/ryantm/persistent-entity-mirror#readme
license:             PublicDomain
license-file:        LICENSE
author:              Ryan Mulligan
maintainer:          ryan@ryantm.com
category:            Database
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , text
  default-language:    Haskell2010

executable persistent-entity-mirror-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , persistent-entity-mirror
  default-language:    Haskell2010

test-suite persistent-entity-mirror-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Spec.hs
  build-depends:       base
                     , text
                     , persistent-entity-mirror
                     , hspec
                     , mysql-simple
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ryantm/persistent-entity-mirror
